# fenris

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSES.md  README.md  carbon-rust-migration-plan.md  performance-dashboard-plan.md
crates/carbon-resources-compat/: Cargo.toml
crates/carbon-resources-compat/src/: lib.rs
crates/carbon-resources-core/: Cargo.toml
crates/carbon-resources-core/src/: lib.rs
crates/carbon-resources-pipeline/: Cargo.toml
crates/carbon-resources-pipeline/src/: lib.rs
crates/carbon-resources-trace/: Cargo.toml
crates/carbon-resources-trace/src/: lib.rs
crates/carbon-scheduler-core/: Cargo.toml
crates/carbon-scheduler-core/src/: lib.rs
crates/carbon-scheduler-ffi/: Cargo.toml
crates/carbon-scheduler-ffi/src/: lib.rs
crates/carbon-scheduler-python/: Cargo.toml  build.rs  pyproject.toml
crates/carbon-scheduler-python/scheduler/: __init__.py
crates/carbon-scheduler-python/src/: lib.rs
crates/carbon-scheduler-trace/: Cargo.toml
crates/carbon-scheduler-trace/src/: lib.rs
docs/: README.md  functionality-matrix.md  repo-organization.md  scheduler-v2-rust-rewrite-plan.md
docs/archive/: README.md
docs/archive/baseline/: carbonengine-baseline.md  test-harness-status.md
docs/archive/planning/: carbon-rust-migration-plan.md  performance-dashboard-plan.md  (+1 more)
fixtures/io/: socketpair_recv_send_wake.json  ssl_handshake_read_write_wake.json  ssl_send_throw_error_wake.json
fixtures/scheduler/: blocking_receive.json  blocking_send.json  channel_block_trap_no_balance_change.json  channel_block_trap_nonblocking_transfer.json  channel_blocked_membership_single_queue_cleanup.json  channel_callback_will_block.json  channel_clear_kills_blocked.json  channel_clear_pending_exit_cleanup.json  channel_close_cleanup_blocked_receivers.json  channel_close_open_parity.json  channel_closed_send_receive_errors.json  channel_exception_payloads.json  channel_kill_error_cleanup_while_blocked.json  channel_main_side_preference_matrix.json  channel_pending_kill_completed_transfer_preferences.json  channel_preference_neither_multi_party_order.json  channel_preference_neither_simple.json  channel_preference_neither_tasklet_transfer.json  channel_preference_sender.json  channel_preference_sender_receiver_first.json  channel_queue_introspection_order.json  channel_raise_exception_reblock_cleanup.json  channel_send_exception_main_receive.json  deadlock.json  fixture_teardown_blocked_channel_cleanup.json  fixture_teardown_unblock_all_channels.json  main_receive_immediate_deadlock.json  main_send_deadlock_after_running_child_tasklets.json  main_send_immediate_deadlock.json  multi_level_nested_schedule_order.json  multi_level_nested_schedule_order_no_nested.json  nested_tasklet_parent_chain.json  nested_tasklet_run_order.json  nested_tasklet_run_order_no_nested.json  nested_tasklet_schedule_order.json  nested_tasklet_schedule_order_no_nested.json  nested_tasklet_switch_blocked_parent_chain.json  nested_tasklet_switch_parent_chain.json  nested_yield_to_blocked.json  nested_yield_to_blocked_no_nested.json  (+27 more)
reviews/: README.md  coverage-map.md  findings.jsonl  optimization-map.md  performance-map.md  queue.md  report-readiness.md  scheduler-cpp-baseline-note.md  tasks.md
reviews/pairs/: wave1-channel.md  wave1-schedule-manager.md  wave1-tasklet.md  wave1-test-channel.md  wave1-test-queuechannel.md  wave1-test-scheduler.md  wave1-test-tasklet.md  wave1-test-utils.md  wave2-capi-channel.md  wave2-capi-interpreter.md  wave2-capi-scheduler.md  wave2-capi-tasklet.md  wave2-py-channel.md  wave2-py-schedule-manager.md  wave2-py-tasklet.md  wave2-scheduler-h.md  wave2-scheduler-module.md  wave3-c-channel.md  wave3-carbonio.md  wave3-socketmodule.md  wave3-ssl.md  wave3-test-socket.md  wave3-test-ssl.md  wave4-bundle-resource-group.md  wave4-downloader.md  wave4-gzip-compression.md  wave4-md5-checksum.md  wave4-patch-resource-group.md  wave4-resource-filter.md  wave4-resource-group.md  wave4-resource-tools.md  wave4-resources-tests.md  wave4-threadpool-pipeline.md
scripts/: carbon-native-bench.sh  render-blog-report.py  render-carbon-to-rust-migration-test.py  serve-blog-report.sh  serve-carbon-to-rust-migration-test.sh
xtask/: Cargo.toml
xtask/src/: main.rs
