[workspace]
members = [
    "crates/carbon-resources-compat",
    "crates/carbon-resources-core",
    "crates/carbon-resources-pipeline",
    "crates/carbon-resources-trace",
    "crates/carbon-scheduler-core",
    "crates/carbon-scheduler-ffi",
    "crates/carbon-scheduler-python",
    "crates/carbon-scheduler-trace",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.86"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = "thin"

[profile.release-native]
inherits = "release"
codegen-units = 1
lto = "fat"
