[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
carbon-resources-core = { path = "../carbon-resources-rs/crates/carbon-resources-core" }
carbon-scheduler-core = { path = "../carbon-scheduler-rs/crates/carbon-scheduler-core" }
carbon-scheduler-trace = { path = "../carbon-scheduler-rs/crates/carbon-scheduler-trace" }
serde_json.workspace = true
