[package]
name = "carbon-resources-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
arrow.workspace = true
bsdiff = "0.2"
bytes.workspace = true
flate2 = "1.0"
md5 = "0.7"
parquet.workspace = true
serde.workspace = true
serde_yaml = "0.9"
