[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "carbon-scheduler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["greenlet"]

[tool.maturin]
bindings = "pyo3"
module-name = "_scheduler"
features = ["extension-module"]
include = [{ path = "scheduler/**/*", format = "wheel" }]
