[package]
name = "carbon-scheduler-trace"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
carbon-scheduler-core = { path = "../carbon-scheduler-core" }
serde.workspace = true
serde_json.workspace = true
